AdolaDEVMeta/force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>Address Custom</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>