AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/Area_Status__c.field-meta.xml
<CustomField>
    <fullName>Area_Status__c</fullName>
    <description>The status of the area.</description>
    <formula>TEXT(Location__r.Internal_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of the area.</inlineHelpText>
    <label>Area Status</label>
    <type>Text</type>
</CustomField>