AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>