AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/Keycom_Id__c.field-meta.xml
<CustomField>
    <fullName>Keycom_Id__c</fullName>
    <externalId>true</externalId>
    <label>Keycom Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>