AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipName>Address</relationshipName>
    <type>Lookup</type>
</CustomField>