AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/LocationType__c.field-meta.xml
<CustomField>
    <fullName>LocationType__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesarea</fullName>
            </value>
            <value>
                <fullName>Servicearea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>