AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/ServiceArea__c.field-meta.xml
<CustomField>
    <fullName>ServiceArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Area</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Address Custom (Service Area)</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>