AdolaDEVMeta/force-app/main/default/objects/Address__c/fields/Status_Test__c.field-meta.xml
<CustomField>
    <fullName>Status_Test__c</fullName>
    <description>This is test field to chain all the logic from area to address to order.</description>
    <formula>IF( ISBLANK( External_Status__c ) ,  Area_Status__c , 
  External_Status__c)</formula>
    <inlineHelpText>This is test field to chain all the logic from area to address to order.</inlineHelpText>
    <label>Status Test</label>
    <type>Text</type>
</CustomField>