AdolaDEVMeta/force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Lappeenranta_8</value>
    </filters>
    <filters>
        <field>Construction_Status__c</field>
        <operation>contains</operation>
        <value>valmis</value>
    </filters>
    <label>All</label>
</ListView>